--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
    "name": "itop1000_task",
    "version": "0.1.0",
    "private": true,
+	"homepage": "https://bond1q.github.io/itop1000_task/",
    "dependencies": {
       "@testing-library/jest-dom": "^5.16.5",
       "@testing-library/react": "^13.4.0",
@@ -9,6 +10,7 @@
       "axios": "^1.1.3",
       "classnames": "^2.3.2",
       "formik": "^2.2.9",
+      "gh-pages": "^4.0.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-scripts": "5.0.1",
@@ -20,7 +22,9 @@
       "start": "react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
-      "eject": "react-scripts eject"
+      "eject": "react-scripts eject",
+		"predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
    },
    "eslintConfig": {
       "extends": [
